--- a/PruebasLibiGL/PruebasLibiGL.vcxproj.filters
+++ b/PruebasLibiGL/PruebasLibiGL.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="AmbientOcclusionExpanded.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AmbientOcclusionExpanded.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
