--- a/ass1/ass1.vcxproj
+++ b/ass1/ass1.vcxproj
@@ -69,6 +69,7 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="..\..\..\Recursos\OpenGL\PropertySheetGL33.props" />
+    <Import Project="..\LibIGL.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -83,7 +84,6 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\Users\burtasun\source\repos\PruebasLibiGL\libigl\include;C:\vcpkg\installed\x64-windows\include;;C:\Users\burtasun\source\Recursos\OpenGL\glm-0.9.9.4\glm;C:\Users\burtasun\source\Recursos\OpenGL\glad\include;C:\Users\burtasun\source\Recursos\OpenGL\glfw-3.3.bin.WIN64\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
